# Jupyter-Authenticator

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  version.py
.github/: dependabot.yml
.github/workflows/: CodeQL.yml  PackagePublish.yml  PackageTest.yml  Unittests.yml  update_latest.yml
crc_jupyter_auth/: __init__.py  remote_user_auth.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  install.rst  remote_user_auth.rst
jhub_remote_user_authenticator/: remote_user_auth.py
tests/: test_registration.py  test_remote_user_login_handler.py  test_request_routing.py
